Added cover image information.

--- a/appPrimary.css
+++ b/appPrimary.css
@@ -1,5 +1,8 @@
 #page-info {
-	background-color: blue;
+	background-image: url("Background.jpg");
+	background-repeat: no-repeat;
+	background-position: top;
+	background-size: cover;
 }
 
 .title {
