--- a/appPrimary.css
+++ b/appPrimary.css
@@ -1,10 +1,52 @@
 #page-info {
 	background-image: url("Background.jpg");
 	background-repeat: no-repeat;
-	background-position: top;
 	background-size: cover;
 }
 
 .title {
-	color: red;
+	color: black;
+	font-family: "Times New Roman";
+	font-size: 25px;
 }
+
+.map{
+	margin-right: 20px;
+	margin-bottom: 50px;
+	width: 1450px;
+	height: 600px;
+    background-color: lightblue;
+    float: right;
+    overflow: hidden; 
+    display: inline;
+}
+
+.timeline{
+	margin-right: 20px;
+	width: 1450px;
+	height: 125px;
+    background-color: blue;
+    float: right;
+    overflow: hidden;
+    display: inline;
+}
+
+.locations{
+	margin-left: 20px;
+	width: 320px;
+	height: 470px;
+    background-color: white;
+    overflow: hidden;
+}
+
+.chemicals{
+	margin-top:20px;
+	margin-left: 20px;
+	width: 320px;
+	height: 320px;
+    background-color: white;
+    overflow: hidden;
+    display: inline;
+    float: left;
+}
+
