--- a/appPrimary.css
+++ b/appPrimary.css
@@ -1,52 +1,105 @@
 #page-info {
+	width: 100%;
+	height: 100vh;
+	border: 0px solid;
+	margin: 0px;
+	padding: 0px;
 	background-image: url("Background.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
+	display: flex;
+	flex-wrap: wrap;
+	overflow: hidden;
 }
 
+#container {
+	width: 100%;
+	height: 620px;
+	margin: 0px;
+	padding: 0px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	display: flex;
+	flex-wrap: wrap;
+	overflow: hidden;
+}
+
+/*TITLE BAR*/
+
 .title {
+	margin: 0px;
+	width: 100%;
+	height: 100px;
+	padding: 10px;
 	color: black;
 	font-family: "Times New Roman";
 	font-size: 25px;
+	display: block;
+	overflow: hidden;
 }
 
-.map{
-	margin-right: 20px;
-	margin-bottom: 50px;
-	width: 1450px;
-	height: 600px;
-    background-color: lightblue;
-    float: right;
-    overflow: hidden; 
-    display: inline;
-}
-
-.timeline{
-	margin-right: 20px;
-	width: 1450px;
-	height: 125px;
-    background-color: blue;
-    float: right;
-    overflow: hidden;
-    display: inline;
-}
+/*LOCATIONS OPTIONS*/
 
 .locations{
 	margin-left: 20px;
+	margin-right: 20px;
+	margin-bottom: 0px;
 	width: 320px;
-	height: 470px;
+	height:600px;
+	border: 10px solid grey;
+	position: flex;
+	justify-content: flex-start;
+	align-content: flex-start;
+	border-radius: 10px;
+	overflow: hidden;
+}
+
+.list{
+	width: 100%;
+	height: 100%;
+	background-color: white; 
+	position: flex;
+	margin: 0px;
+	overflow: hidden;
+}
+
+/*MAP*/
+
+.map{
+	width: 1450px;
+	height: 600px;
+	margin-left: 20px;
+    background-color: lightblue;
+	border: 10px solid grey;
+	border-radius: 10px;
+	display: flex;
+	right: -20px;
+	overflow: hidden;
+}
+
+/*TIMELINE*/
+
+.timeline{
+	margin: 0px;
+	width: 1450px;
+	height: 200px;
     background-color: white;
+    border: 10px solid grey;
+    border-radius: 10px;
     overflow: hidden;
 }
+
+/*OPTIONS*/
 
 .chemicals{
-	margin-top:20px;
 	margin-left: 20px;
+	margin-right: 40px;
 	width: 320px;
-	height: 320px;
+	height: 200px;
     background-color: white;
-    overflow: hidden;
-    display: inline;
-    float: left;
+	border: 10px solid grey;
+	border-radius: 10px;
+	overflow: hidden;
 }
 
+/*javascript fetch command
