--- a/appPrimary.css
+++ b/appPrimary.css
@@ -10,19 +10,18 @@
 	display: flex;
 	flex-wrap: wrap;
 	overflow: hidden;
-	zoom: 1;
 }
 
 #container {
 	width: 100%;
-	height: 620px;
+	height: 70%;
 	margin: 0px;
 	padding: 0px;
 	background-repeat: no-repeat;
 	background-size: cover;
 	display: flex;
 	flex-wrap: wrap;
-	overflow: hidden;
+	overflow: wrap;
 }
 
 /*TITLE BAR*/
@@ -30,7 +29,7 @@
 .title {
 	margin: 0px;
 	width: 100%;
-	height: 100px;
+	height: 10%;
 	padding: 10px;
 	color: black;
 	font-family: "Times New Roman";
@@ -42,11 +41,9 @@
 /*LOCATIONS OPTIONS*/
 
 .locations{
-	margin-left: 20px;
-	margin-right: 20px;
-	margin-bottom: 0px;
-	width: 320px;
-	height:600px;
+	margin-left: 1%;
+	width: 18%;
+	height: 95%;
 	border: 10px solid grey;
 	position: flex;
 	justify-content: flex-start;
@@ -61,15 +58,16 @@
 	background-color: white; 
 	position: flex;
 	margin: 0px;
-	overflow: hidden;
+	overflow: scroll;
+	scroll-behavior: smooth;
 }
 
 /*MAP*/
 
 .map{
-	width: 1450px;
-	height: 600px;
-	margin-left: 20px;
+	width: 75%;
+	height: 95%;
+	margin-left: 2%;
     background-color: lightblue;
 	border: 10px solid grey;
 	border-radius: 10px;
@@ -81,17 +79,18 @@
 /*TIMELINE*/
 
 .timeline{
-	margin: 0px;
-	width: 1450px;
-	height: 200px;
+	margin: 20px;
+	width: 96%;
+	height: 10%;
     background-color: white;
     border: 10px solid grey;
     border-radius: 10px;
+    position: center;
     overflow: hidden;
 }
 
 /*OPTIONS*/
-
+/*
 .chemicals{
 	margin-left: 20px;
 	margin-right: 40px;
@@ -102,5 +101,6 @@
 	border-radius: 10px;
 	overflow: hidden;
 }
+*/
 
 /*javascript fetch command
