--- a/appPrimary.css
+++ b/appPrimary.css
@@ -37,7 +37,7 @@
 
 /*LOCATIONS OPTIONS*/
 
-.locations{
+.locations {
 	margin-left: 2%;
 	width: 18%;
 	height: 95%;
@@ -48,10 +48,10 @@
 	overflow: hidden;
 }
 
-.list{
+.list {
 	width: 100%;
 	height: 100%;
-	background-color: white; 
+	background-color: white;
 	position: flex;
 	margin: 0px;
 	overflow: scroll;
@@ -60,11 +60,11 @@
 
 /*MAP*/
 
-.map{
+.map {
 	width: 73%;
 	height: 95%;
 	margin-left: 2%;
-    background-color: lightblue;
+	background-color: #313030;
 	border: 8px solid grey;
 	border-radius: 10px;
 	display: flex;
@@ -73,28 +73,18 @@
 
 /*TIMELINE*/
 
-.timeline{
+.timeline {
 	margin: 2%;
 	width: 94%;
 	height: 10%;
-    background-color: white;
-    border: 8px solid grey;
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-/*OPTIONS*/
-/*
-.chemicals{
-	margin-left: 20px;
-	margin-right: 40px;
-	width: 320px;
-	height: 200px;
-    background-color: white;
-	border: 10px solid grey;
+	background-color: white;
+	border: 8px solid grey;
 	border-radius: 10px;
 	overflow: hidden;
 }
-*/
 
-/*javascript fetch command
+#earth_div {
+	padding: 10px;
+	width: 40%;
+	height: 95%;
+}
