--- a/appPrimary.css
+++ b/appPrimary.css
@@ -83,12 +83,14 @@
 	overflow: hidden;
 }
 
+/* EARTH */
 #earth_div {
 	padding: 10px;
 	width: 40%;
 	height: 95%;
 }
 
+/* SLIDER */
 .slidecontainer {
 	width: 100%;
 }
@@ -126,4 +128,49 @@
 	border-radius: 50%;
 	background: #4caf50;
 	cursor: pointer;
+}
+
+/* DROPDOWN */
+.dropbtn {
+	background-color: #3498db;
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+}
+
+.dropbtn:hover,
+.dropbtn:focus {
+	background-color: #2980b9;
+}
+
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 160px;
+	overflow: auto;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
+}
+
+.dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+
+.dropdown a:hover {
+	background-color: #ddd;
+}
+
+.show {
+	display: block;
 }
