--- a/style.css
+++ b/style.css
@@ -140,3 +140,21 @@
 .cesium-credit-textContainer {
 	display: none;
 }
+
+path {
+	stroke: steelblue;
+	stroke-width: 2;
+	fill: none;
+}
+
+.axis path,
+.axis line {
+	fill: none;
+	stroke: grey;
+	stroke-width: 1;
+	shape-rendering: crispEdges;
+}
+
+#myChart {
+	background-color: white;
+}
