--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 * {
-	/* font-family: 'Slabo 27px', serif; */
-	/* font-family: 'Roboto Slab', serif; */
 	font-family: 'Poppins', sans-serif;
 }
 
@@ -10,7 +8,7 @@
 	border: 0px solid;
 	margin: 0px;
 	padding: 0px;
-	background-image: url("Background.jpg");
+	/* background-image: url("Background.jpg"); */
 	background-repeat: no-repeat;
 	background-size: cover;
 	display: flex;
@@ -18,82 +16,130 @@
 	overflow: hidden;
 }
 
-#container {
+body {
+	overflow-y: auto;
+}
+/* #container {
 	width: 100%;
-	height: 67%;
+	height: 10%;
 	margin: 0px;
 	padding: 0px;
 	background-repeat: no-repeat;
 	background-size: cover;
 	display: flex;
 	flex-wrap: wrap;
-}
+} */
 
 /*TITLE BAR*/
 
-.title {
+/* .title {
 	margin-left: 3%;
 	width: 100%;
 	color: #303131;
-	font-family: "Times New Roman";
 	font-size: 150%;
 	display: block;
 	overflow: hidden;
-}
+} */
 
 /*LOCATIONS OPTIONS*/
-
 .locations {
-	margin-left: 2%;
-	width: 18%;
-	height: 95%;
-	border: 8px solid grey;
+	/* display: none; */
+	margin: 1%;
+	margin-top: 0%;
+	width: 100%;
+	height: 10%;
 	justify-content: flex-start;
 	align-content: flex-start;
-	border-radius: 10px;
-	overflow: hidden;
 }
 
 .list {
 	width: 100%;
 	height: 100%;
-	background-color: white;
+	background-color: pink;
 	position: flex;
 	margin: 0px;
 	overflow: scroll;
 	scroll-behavior: smooth;
 }
 
-/*MAP*/
-
-.map {
-	width: 73%;
-	height: 95%;
-	margin-left: 2%;
-	background-color: #313030;
-	border: 8px solid grey;
-	border-radius: 10px;
+.search_categories {
+	font-size: 17px;
+	/* margin-top:  */
+	width: 20%;
+	position: relative;
 	display: flex;
-	overflow: hidden;
+	justify-content: center;
+	align-items: center;
+	height: 7%;
+	background-color: #f9f9f9;
+	box-shadow: 0px 1px 16px 0px rgba(0, 0, 0, 0.2);
+	outline: none;
+}
+input {
+	outline: none;
+}
+#sc1 {
+	margin-left: 10%;
+	margin-right: 10%;
+}
+#sc2 {
+	margin-left: 0%;
+	margin-right: 10%;
+}
+#sc3 {
+	margin-left: 0%;
+	margin-right: 10%;
+}
+#pastAirFuture {
+	width: 100%;
+	text-align: center;
+	color: #303131;
+}
+.search_categories .select select {
+	/* line-height: 1; */
+	border: 0;
+	padding: 0;
+	border-radius: 0;
+	width: 100%;
+	position: relative;
+	z-index: 10;
+	font-size: 1em;
+}
+
+.search_categories .select {
+	width: 50%;
+	background-position: 80% center;
+}
+
+/*MAP*/
+.map {
+	width: 100%;
+	height: 60%;
+	margin: 0% 2% 1% 2%;
+	/* background-color: #313030; */
+	display: flex;
+}
+/* EARTH */
+#earth_div {
+	padding: 1%;
+	width: 50%;
+	height: 95%;
+}
+#map_div {
+	padding: 1%;
+	width: 45%;
+	height: 95%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 /*TIMELINE*/
-
 .timeline {
-	margin: 2%;
-	width: 84%;
+	margin-left: 10%;
+	margin-right: 10%;
+	width: 80%;
 	height: 10%;
-	background-color: white;
-	border: 8px solid grey;
-	border-radius: 10px;
-	overflow: hidden;
-}
-
-/* EARTH */
-#earth_div {
-	padding: 10px;
-	width: 40%;
-	height: 95%;
 }
 
 .slidecontainer {
@@ -102,7 +148,7 @@
 
 .slider {
 	-webkit-appearance: none;
-	width: 99.7%;
+	width: 100%;
 	height: 25px;
 	background: #d3d3d3;
 	outline: none;
@@ -115,24 +161,40 @@
 	opacity: 1;
 }
 
+#submitButton {
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-top: -2%;
+	width: 80%;
+	height: 10%;
+	text-align: center;
+}
+
+#button1 {
+	width: 20%;
+	text-align: center;
+	background-color: #a5dff9;
+	box-shadow: 0px 1px 16px 0px rgba(0, 0, 0, 0.2);
+	outline: none;
+	color: #303131;
+	cursor: pointer;
+}
+
+#monthSliderOutput {
+	margin-bottom: 0%;
+	color: #303131;
+}
+
 .slider::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	appearance: none;
 	width: 25px;
 	height: 25px;
-	background: #4caf50;
-	cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-	width: 25px;
-	height: 25px;
-	background: #4caf50;
+	background: #30a9de;
 	cursor: pointer;
 }
 
 /* D3 */
-
 .line-chart {
 	border: 1px solid lightgray;
 }
@@ -154,7 +216,14 @@ path {
 	stroke-width: 1;
 	shape-rendering: crispEdges;
 }
-
+#currentSelection {
+	width: 100%;
+	text-align: center;
+	margin-bottom: 2%;
+}
+#currentSelectionValues {
+	color: #303131;
+}
 #myChart {
 	background-color: white;
 }
